quorum/test/tests/TypeChecker/Pass/ReturningIntegerInPlaceOfNumber.quorum
class Main
    action Main
        number n = doSomething()
    end
    action doSomething() returns number
        return 4
    end
end