quorum/test/tests/TypeChecker/Fail/ImpAssignNumberBooleanWrapped.quorum
class main
    action main
        number n = true
    end
end